# mermaid-nb

./: LICENSE  README.md  example-marimo.py  example.ipynb  pyproject.toml
src/mermaid_nb/: __init__.py
src/mermaid_nb/static/: widget.js
