[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mermaid-nb"
version = "0.0.1"
dependencies = ["anywidget<0.10"]
readme = "README.md"

# For projects not using `uv`, you can install these development dependencies with:
# `pip install -e ".[dev]"`
# If you're using `uv` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab", "marimo"]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab", "marimo"]
